# random-bevy-bullet-hell

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  result  shell.nix
.cargo/: config.toml
assets/: bullet.aseprite  dao_plant.aseprite  level.ldtk  reimu.aseprite  reimu.aseprite.bak2  yuyko.aseprite  yuyuko.aseprite
assets/level/backups/a302fc80-7820-11ed-b6fd-0944dd561895_2025-03-30_18-05-53_crash/: level.ldtk
src/: colliders.rs  config.rs  ground_detection.rs  main.rs  main_menu.rs  shared.rs  state.rs  walls.rs  world.rs
src/bullet/: animation.rs  mod.rs  physics.rs
src/bullet/config/: animation.rs  mod.rs  physics.rs
src/bullet_pattern/: construction.rs  mod.rs
src/bullet_pattern/circle/: mod.rs
src/bullet_patterns/circle/: mod.rs
src/camera/: config.rs  mod.rs
src/config/: ldtk.rs  mod.rs  world.rs
src/enemy/: mod.rs
src/enemy/boss/: mod.rs
src/enemy/boss/yuyuko/: mod.rs
src/enemy/spawner/: mod.rs
src/enemy/spawner/turret/: mod.rs
src/enemy/still/: dao_plant.rs  mod.rs
src/gui/: gui_parts.rs  mod.rs
src/gui/bar/: health.rs  mod.rs  stamina.rs
src/input/: config.rs  debug.rs  mod.rs
src/physics/: looking_direction.rs  mod.rs  movement.rs  shared.rs
src/player/: animation.rs  config.rs  mod.rs  physics.rs  sprite.rs  state.rs  stats.rs
src/player/attack/: melee.rs  mod.rs
src/player/config/: animation.rs  collision.rs  mod.rs  physics.rs  stats.rs
src/spell_card/: mod.rs
src/spell_card/circle_of_fifth/: mod.rs
src/spell_card/circles_of_fifth/: mod.rs
src/ui/: mod.rs
src/ui/bar/: health.rs  mod.rs  stamina.rs
