[package]
name = "bevy-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["multi_threaded", "bevy_state", "bevy_picking", "sysinfo_plugin", "zstd", "bevy_ui_picking_backend", "bevy_window", "wayland", "dynamic_linking", "animation", "bevy_asset", "bevy_audio", "bevy_core_pipeline", "bevy_gilrs", "bevy_scene", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_winit", "default_font", "png", "vorbis"] }
bevy-inspector-egui = "0.28.1"
bevy_aseprite_ultra = "0.4.1"
bevy_ecs_ldtk = "0.11.0"
bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier" }
# bevy_rapier2d = "0.28"
# bevy_aseprite_ultra = { git = "https://github.com/Lommix/bevy_aseprite_ultra"}
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
# once_cell = "1.20.2"

[dev-dependencies]
bevy = { version = "0.15", features = [
    "file_watcher",
    "multi_threaded",
    "bevy_window",
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# [profile.dev.package.bevy_rapier2d]
# opt-level = 3

# Enable a large amount of optimization in the dev profile for dependencies.
# [profile.dev.package."*"]
# opt-level = 3


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
