[package]
name = "random-bevy-bullet-hell"
version = "0.1.0"
edition = "2021"
exclude = [".cargo"]

[dependencies]
# avian2d = { version = "0.2", default-features = false, features = [ "2d", "f64", "parry-f64" ] }
bevy = { version = ">=0.16", default-features = false, features = ["multi_threaded", "bevy_state", "bevy_picking", "sysinfo_plugin", "zstd", "bevy_ui_picking_backend", "bevy_window", "wayland", "animation", "bevy_asset", "bevy_audio", "bevy_core_pipeline", "bevy_gilrs", "bevy_scene", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_winit", "default_font", "png", "vorbis"] }
bevy-inspector-egui = ">=0.31"
bevy_aseprite_ultra = ">=0.6"
bevy_ecs_ldtk = ">=0.12"
bevy_hui = ">=0.4"
# bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier" }
bevy_rapier2d = ">=0.30"
# bevy_aseprite_ultra = { git = "https://github.com/Lommix/bevy_aseprite_ultra"}
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = ">=0.9"
thiserror = ">=2.0"

[dev-dependencies]
bevy = { version = ">=0.16", features = [
    "dynamic_linking",
    "file_watcher",
    "multi_threaded",
    "bevy_window",
] }


# Optimizations in debug builds.
[profile.dev]
opt-level = 3
# opt-level = 1


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
